@startuml
' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

' entities

Table(user, "USER\n(User in our system)") {
}

Table(sc, "SHOPPING_CART\n(user's current shopping cart)") {
}

Table(cred, "CREDENTIALS\n(user's login credentials)") {
}

Table(product, "PRODUCT\n(list of products in our system)") {
}

Table(item, "ITEM\n(an item representing purchased\n product in a shopping cart)") {
}

' relationships
' user "1" --> "*" user_group : "A user may be \nin many groups"
' group "1" --> "0..N" user_group : "A group may \ncontain many users"



@enduml